# video_coding

./: CMakeLists.txt  README  cap_ffmpeg_impl.hpp  test.cpp
ffmpeg-git-ceb0dd9-win32-dev/: README.txt
ffmpeg-git-ceb0dd9-win32-dev/include/libavutil/: common.h
ffmpeg-git-ceb0dd9-win32-dev/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
